# scene-reconstruction

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: BUILDER.md  DTM_FRUSTUM_SELECTION_PLAN.md  PLAN.md  SELECTION_MASTER_PLAN.md  SELECTION_OBJECTIVE_PLAN.md
scripts/: _common.sh  _paths.sh  allow-my-ip.sh  analyze_matching.py  audit_run.sh  bootstrap-ec2.sh  build.sh  clean-root-artifacts.sh  fetch-data.sh  launch-ec2.sh  prepare_odm.sh  run_all.sh  run_odm.sh  start-ec2.sh  stop-ec2.sh  terminate-ec2.sh
src/scene_recon/: __init__.py  build.py  camera.py  candidates.py  cli.py  export.py  frame_select.py  intrinsics.py  odm.py  paths.py  poses.py  record.py  run_audit.py  schema.py  scoring.py  scoring_cache.py  selection_health.py  selection_insight.py  selection_report.py  video.py
src/scene_recon/geometry/: extrinsics.py  footprint.py  raymarch.py  terrain.py
src/scene_recon/matching/: __init__.py  covisibility.py  profile.py  runner.py  scoreboard.py  tuner.py
src/scene_recon/selection/: __init__.py  cluster.py  footprint.py  grid.py  metrics.py  parallax.py  params.py  selector.py
tests/: conftest.py  test_camera.py  test_extrinsics.py  test_footprint_engine.py  test_frame_select.py  test_grid.py  test_intrinsics.py  test_odm.py  test_parallax.py  test_paths.py  test_raymarch.py  test_record.py  test_run_audit.py  test_selection_health.py  test_selection_insight.py  test_selection_report.py  test_terrain.py
